# gc_derivatization

./: CHANGELOG.md  Dockerfile  Makefile  README-package.md  README.md  derivatization.ipynb  pyproject.toml  requirements-dev.txt  setup.cfg
.github/workflows/: anaconda.yaml  publish_pypi.yaml  python-package-conda.yaml  python-package.yaml
conda/: environment-build.yaml  environment-dev.yaml  meta.yaml
example/: NIST_195_200.txt  README.md  derivatization.ipynb  derivatization.ipynbZone.Identifier  derivatization.py  derivs_flat.txt  derivs_struct.tsv  gc_meox_src.py  plotting.py
gc_derivatiozation/: __main__.py  gc_meox_tms.py  utils.py
gc_meox_tms/: __init__.py  __main__.py  derivatization.py  gc_meox_src.py  gc_meox_tms.py  utils.py
src/: gc_meox.py
tests/: conftest.py  test_cli.py  test_derivatization.py  test_gc_meox.py  test_io.py  test_utils.py
tests/data/: acidic_protons.txt  alcohols.txt  aldehydes.txt  ketones.txt
