[metadata]
name = gc-meox-tms
version = 0.0.1
author = Ales Krenek
author_email = ljocha@ics.muni.cz
description = In-sillico derivatization of compounds to be identified in gass chromatography
long_description = file: README-package.md
long_description_content_type = text/markdown
url = https://github.com/ljocha/gc-derivatization
project_urls =
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
scripts = 
    bin/gc-meox-tms.py
install_requires =
    rdkit-pypi

[options.packages.find]
where = src
