[metadata]
name = gc-meox-tms
version = 0.0.1
author = Ales Krenek
author_email = ljocha@ics.muni.cz
description = In-silico derivatization of compounds to be identified in gas chromatography
long_description = file: README-package.md
long_description_content_type = text/markdown
url = https://github.com/ljocha/gc-derivatization
project_urls =
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = gc_meox_tms
python_requires = >=3.8
install_requires =
    rdkit-pypi

[options.extras_require]
dev =
    flake8
    pytest
    pytest-cov
    pytest-rerunfailures
eda =
    jupyter
