[metadata]
name = gc-meox-tms
version = 1.0.0
author = "Ales Krenek, Maksym Skoryk"
author_email = "ljocha@ics.muni.cz, maksym.skoryk@recetox.muni.cz"
maintainer = "RECETOX"
maintainer_email = "GalaxyToolsDevelopmentandDeployment@space.muni.cz"
description = In-silico MeOX/TMS derivatization of chemical compounds
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/RECETOX/gc-meox-tms
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = gc_meox_tms
python_requires = >=3.8
install_requires =
    rdkit-pypi

[options.extras_require]
dev =
    flake8
    mock
    pytest
    pytest-cov
    pytest-rerunfailures
eda =
    jupyter
    py3Dmol
